[package]
name = "miye"
description = "A simple, lightweight .obj model renderer."
license = "MIT"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.16.0", features = ["derive"] }
glam = "0.27.0"
image = "0.25.1"
pollster = "0.3.0"
rand = "0.8.5"
tobj = "4.0.2"
wgpu = "0.20.0"
winit = "0.30.0"
